# daisy-vleerhond

./: .gitignore  Makefile  README.md  daisy_midi_io.cpp  daisy_midi_io.h  polypaly.cpp  polypaly.h  tom.h  transient_detector.cpp  transient_detector.h  vleerhond.cpp
vleerhond_lib/application/: application_data.cpp  application_data.h  callbacks.cpp  callbacks.h  midi_time_listener.cpp  midi_time_listener.h  nanokontrol2.cpp  nanokontrol2.h  ui.cpp  ui.h  user_event.cpp  user_event.h
vleerhond_lib/core/: consts.h  defs.h  enums.h  note_struct.cpp  note_struct.h  time_struct.cpp  time_struct.h  timing_structs.cpp  timing_structs.h
vleerhond_lib/harmony/: chord_struct.h  chord_type.cpp  chord_type.h  chords.cpp  chords.h  harmony_struct.cpp  harmony_struct.h  scale.cpp  scale.h
vleerhond_lib/instruments/: instrument_base.cpp  instrument_base.h  instrument_group.cpp  instrument_group.h  instrument_rack.cpp  instrument_rack.h
vleerhond_lib/midi/: console_midi_channel.cpp  console_midi_channel.h  dummy_midi_channel.cpp  dummy_midi_channel.h  midi_channel.cpp  midi_channel.h  midi_io.cpp  midi_io.h
vleerhond_lib/patterns/: ab.cpp  ab.h  arp.cpp  arp.h  binary_pattern.cpp  binary_pattern.h  chord_pattern.cpp  chord_pattern.h  cv_patterns.cpp  cv_patterns.h  fugue.cpp  fugue.h  gate_patterns.cpp  gate_patterns.h  interval_pattern.cpp  interval_pattern.h  modulators.cpp  modulators.h  pattern_utils.cpp  pattern_utils.h  sample_and_hold.cpp  sample_and_hold.h
vleerhond_lib/utils/: rand.h  (+5 more)
vleerhond_test/: CMakeLists.txt  Makefile  test_cv_patterns  test_cv_patterns.cpp
(+83 files in other folders)
